k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
  namespace: app-producao
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
